--- a/sandbox.html
+++ b/sandbox.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="./uplot/uPlot.min.css">
   </head>
   <body>
-    <p>Latest events:</p><div id="chart1"></div>
-    <p>Aggregated history:</p><div id="chart2"></div>
+    <div id="chart1"></div>
+    <div id="chart2"></div>
     <script src="./uplot/uPlot.iife.js"></script>
     <script src='./uplot.js'></script>
     <textarea readonly class="event-log" rows='12' cols='88'></textarea>
