Use one div for all charts

--- a/sandbox.html
+++ b/sandbox.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="./uplot/uPlot.min.css">
   </head>
   <body>
-    <div id="chart1"></div>
-    <div id="chart2"></div>
     <script src="./uplot/uPlot.iife.js"></script>
+    <div id="charts"></div>
     <script src='./uplot.js'></script>
     <textarea readonly class="event-log" rows='12' cols='88'></textarea>
     <script src='./sandbox.js'></script>
