--- a/sandbox.html
+++ b/sandbox.html
@@ -12,6 +12,7 @@
     <div id="charts">
       <textarea readonly class="event-log" rows='16' cols='86'></textarea>
     </div>
+    <script src='./classes.js'></script>
     <script src='./uplot.js'></script>
     <script src='./sandbox.js'></script>
   </body>
