--- a/sandbox.html
+++ b/sandbox.html
@@ -10,9 +10,10 @@
   <body>
     <script src="./uplot/uPlot.iife.js"></script>
     <div id="charts">
-      <textarea readonly class="event-log" rows='16' cols='86'></textarea>
+      <textarea readonly class="event-log" rows='6' cols='66'></textarea>
     </div>
     <script src='./classes.js'></script>
+    <script src='./opts3.js'></script>
     <script src='./uplot.js'></script>
     <script src='./sandbox.js'></script>
   </body>
