--- a/sandbox.html
+++ b/sandbox.html
@@ -9,9 +9,8 @@
   </head>
   <body>
     <script src="./uplot/uPlot.iife.js"></script>
-    <div id="charts">
-      <textarea readonly class="event-log" rows='6' cols='66'></textarea>
-    </div>
+    <textarea readonly class="event-log" rows='6' cols='42'></textarea>
+    <div id="charts"></div>
     <script src='./classes.js'></script>
     <script src='./opts3.js'></script>
     <script src='./uplot.js'></script>
