--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="utf-8">
     <title>pm3</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="uPlot.min.css">
+    <link rel="stylesheet" href="pm3/uPlot.min.css">
   </head>
   <body>
-    <script src="uPlot.iife.min.js"></script>
+    <script src="pm3/uPlot.iife.min.js"></script>
     <div id="charts"></div>
     <script src='main.js'></script>
   </body>
 </html>
-
