--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <script src="pm3/uPlot.iife.min.js"></script>
     <div id="charts"></div>
+    <script src='config.js'></script>
     <script src='main.js'></script>
   </body>
 </html>
