--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id='pairs'>
-      Load base-quote asset pairs... <img src='favicon.ico'/><br/>
+      Load base-quote asset pairs... <img src='favicon.ico'/>
       <div id='pair' hidden='true'>
         <select id='base'>
           <option value='' selected>base</option>
