Complete TimeSeries.obAdd

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
     </div>
     <script src="pm3/uPlot.iife.min.js"></script>
-    <div id="charts"></div>
+    <div id="plot"></div>
     <script src='config.js'></script>
     <script src='main.js'></script>
   </body>
