--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,6 @@
     </div>
     <script src="pm3/uPlot.iife.min.js"></script>
     <div id="plot"></div>
-    <script src='config.js'></script>
-    <script src='main.js'></script>
+    <script src='bundle.js'></script>
   </body>
 </html>
