--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id='pairs'>
-      Load base-quote asset pairs... <img src='favicon.ico'/>
+      Load base-quote asset pairs... <img src='favicon.ico' id='cogs'/>
       <div id='pair' hidden='true'>
         <select id='base'>
           <option value='' selected>base</option>
