--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>pm3</title>
+    <title>arbitrage</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="pm3/uPlot.min.css">
+    <!-- <link rel="stylesheet" href="pm3/uPlot.min.css"> -->
   </head>
   <body>
+    <!--
     <div id='pairs'>
       Load base-quote asset pairs... <img src='favicon.ico' id='cogs'/>
       <div id='pair' hidden='true'>
@@ -19,6 +20,10 @@
     </div>
     <script src="pm3/uPlot.iife.min.js"></script>
     <div id="plot"></div>
+    -->
+    <div id='header'>
+      Arbitrage opportunities since 
+    </div>
     <script src='bundle.js'></script>
   </body>
 </html>
